added socket communications and file upload using multer

--- a/client/ws.client.html
+++ b/client/ws.client.html
@@ -3,7 +3,7 @@
 <head>
     Test Socket
     <script>
-        const socket = new WebSocket('ws://localhost:5000');
+        /* const socket = new WebSocket('ws://localhost:5000');
         socket.onopen = function () {
             console.log('Connected');
             socket.send(
@@ -15,7 +15,7 @@
             socket.onmessage = function (data) {
                 console.log('DT: ', JSON.parse(data.data));
             };
-        };
+        }; */
     </script>
 </head>
 
