--- a/client/socket.events.html
+++ b/client/socket.events.html
@@ -7,38 +7,97 @@
         crossorigin="anonymous"></script>
     <script>
         const socket = io('http://localhost:8080');
+        // socket.emit('message', response => {
+
+        // });
         socket.on('connect', function () {
             console.log('Connected');
 
             // socket.emit('events', { test: 'test' });
             socket.emit('message', response => {
-                var data = '{"Name":"John Doe","Email":"john@doe.com","Gender":"male"}';
-                data = JSON.parse(JSON.stringify(response.docs));
 
-                // (C) GENERATE TABLE
-                // (C1) CREATE EMPTY TABLE
-                var table = document.createElement("table"), row, cellA, cellB;
-                document.getElementById("demoA").appendChild(table);
-                let cnt = 0
-                for (let key in data) {
-                    for (const k in data[key]) {
-                        if (Object.hasOwnProperty.call(key, k)) {
-                            const element = key[k];
-                        }
+            });
+        }
+        )
+        socket.on('emit-message', (response) => {
+            console.log('EMIT MESSAGE: ', response);
+            var data = '{"Name":"John Doe","Email":"john@doe.com","Gender":"male"}';
+            data = JSON.parse(JSON.stringify(response.docs));
+
+            // (C) GENERATE TABLE
+            // (C1) CREATE EMPTY TABLE
+            var table =
+                // document.getElementById('userTable')
+                document.createElement("table")
+                , row, cellA, cellB;
+            document.getElementById("demoA").replaceChildren(table);
+            let cnt = 0
+            for (let key in data) {
+                for (const k in data[key]) {
+                    if (Object.hasOwnProperty.call(key, k)) {
+                        const element = key[k];
                     }
+                }
+                // (C2) ROWS & CELLS
+                row = table.insertRow();
+
+                const dataKeys = Object.keys(data[key])
+                const dataValues = Object.values(data[key])
+                let valueRow = table.insertRow()
+                for (let i = 0; i < dataKeys.length; i++) {
+                    const key = dataKeys[i];
+                    const value = dataValues[i]
+
+                    cellB = valueRow.insertCell();
+                    // (C3) KEY & VALUE
+                    if (cnt < dataKeys.length) {
+                        cellA = row.insertCell()
+                        cellA.bgColor = 'blue'
+                        // cellA.offsetWidth = '20px'
+                        cellA.innerHTML = key;
+                    }
+                    cnt++
+                    cellB.innerHTML = value;
+                    cellB.bgColor = 'yellow'
+
+                }
+
+            }
+        });
+        socket.on('gateway-message', function (data) {
+            console.log('event message: ', data);
+            document.getElementById('para1').innerHTML = data.message
+            data = JSON.parse(JSON.stringify(data.res));
+
+            // (C) GENERATE TABLE
+            // (C1) CREATE EMPTY TABLE
+            var table =
+                // document.getElementById('userTable')
+                document.createElement("table")
+                , row, cellA, cellB;
+            document.getElementById("demoA").replaceChildren(table);
+            let cnt = 0
+            let srNo = 1
+            for (let key in data) {
+                for (const k in data[key]) {
+                    data[key][k]['srNo'] = srNo
+                    if (Object.hasOwnProperty.call(key, k)) {
+                        const element = key[k];
+                    }
+                    console.log('EL: ', data[key], srNo, '!*(@%Y(!@*', k, key, key[k], '########', data[key][k], '@%!!', data[key][k]['srNo']);
                     // (C2) ROWS & CELLS
                     row = table.insertRow();
 
-                    const dataKeys = Object.keys(data[key])
-                    const dataValues = Object.values(data[key])
+                    const dataKeys = Object.keys(data[key][k])
+                    const dataValues = Object.values(data[key][k])
                     let valueRow = table.insertRow()
                     for (let i = 0; i < dataKeys.length; i++) {
                         const key = dataKeys[i];
                         const value = dataValues[i]
-
                         cellB = valueRow.insertCell();
                         // (C3) KEY & VALUE
                         if (cnt < dataKeys.length) {
+
                             cellA = row.insertCell()
                             cellA.bgColor = 'blue'
                             // cellA.offsetWidth = '20px'
@@ -46,19 +105,16 @@
                         }
                         cnt++
                         cellB.innerHTML = value;
+                        // cellB.innerHTML = cnt;
+                        // cellB.append = value
                         cellB.bgColor = 'yellow'
 
                     }
-
+                    srNo++
                 }
-            });
-        }
-        )
-        socket.on('message', function (data) {
-            console.log('event MSG: ', data);
-        });
-        socket.on('exception', function (data) {
-            console.log('event exception: ', data);
+
+            }
+
         });
         socket.on('disconnect', function () {
             console.log('Disconnected');
@@ -69,7 +125,11 @@
 
 <body>
     <p id="para1">THis si para</p>
-    <div id="demoA"></div>
+    <div id="demoA">
+        <table id="userTable">
+
+        </table>
+    </div>
 </body>
 
 </html>
